--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Drum Pattern Database</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="https://kit.fontawesome.com/33c7d329d8.js" crossorigin="anonymous"></script>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Playwrite+AU+SA:wght@100..400&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <base href="/">
+  <title>Drum Pattern Database</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="https://kit.fontawesome.com/33c7d329d8.js" crossorigin="anonymous"></script>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
